# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
Logs/: analyze.py
include/: CMakeLists.txt  Logger.cpp  Logger.hpp  enum_tools.hpp
src/: CMakeLists.txt  main.cpp
